--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "express": "^4.21.2",
     "morgan": "^1.10.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "dotenv": "^16.3.1",
+    "@libsql/client": "^0.3.4"
   }
 }
