--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@libsql/client": "^0.3.4",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
-    "socket.io": "^4.8.1",
-    "dotenv": "^16.3.1",
-    "@libsql/client": "^0.3.4"
+    "socket.io": "^4.8.1"
   }
 }
