--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "midu-chat-socket",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "node --watch ./server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/index.js"
+    "start": "node ./server/index.js",
+    "build": "electron-builder",
+    "electron": "electron ."
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,25 @@
     "express": "^4.21.2",
     "morgan": "^1.10.0",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "electron": "^35.0.2",
+    "electron-builder": "^25.1.8"
+  },
+  "main": "main.js",
+  "build": {
+    "appId": "com.tuapp.chat",
+    "productName": "ChatApp",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "**/*",
+      "!**/node_modules/**/*",
+      "main.js"
+    ],
+    "win": {
+      "target": "nsis"
+    }
   }
 }
